# bluerov-ros-pkg

./: .gitignore  BlueROV Schematic.xml  CHANGELOG.rst  CMakeLists.txt  README.md  mkdocs.yml  package.xml
arduino/: bluerov.ino
bluerov/: CMakeLists.txt  package.xml  rosconsole.conf
bluerov/debian/: 99-bluerov.rules
bluerov/extra/: bluerov.perspective  bluerov.rviz  ubuntu_setup.sh
bluerov/launch/: apm.launch  apm_pluginlists.yaml  bluerov2.launch  bluerov_r1.launch  description.launch  export_video.launch  imu_odom.launch  launch_rqt.sh  raspi_camera.launch  rqt.launch  rviz.launch
bluerov/robots/: bluerov.urdf
bluerov/src/: ekf_filter_init.cpp  joystick_remapper.cpp
bluerov_apps/: CMakeLists.txt  README.md  package.xml
bluerov_apps/cfg/: teleop_joy.cfg
bluerov_apps/debian/: 99-bluerov-apps.rules
bluerov_apps/extra/: teleop_joy_bindings.pptx  ubuntu_setup.sh
bluerov_apps/launch/: apm.launch  teleop.launch  teleop_f310.launch  teleop_xbox.launch
bluerov_apps/src/: teleop_joy.cpp
config/: simple_pilot.config  teleop_xbox.config
docs/: BlueROV Schematic.xml  Change History.md  Checklist.md  Contributing.md  Setup Instructions.md  Setup.md  Sprint Notes.md  Test Results.md  Todo.md  Usage.md  Vehicle Overview.md  Vehicle.md  Wet Test Checklist.md  index.md  sprint.md  teleop_joy_source.pptx
extra/: 99-bluerov.rules  bluerov.perspective  thruster equations.xlsx  ubuntu_setup.sh
launch/: apm.launch  apm_config.yaml  apm_pluginlists.yaml  camera.launch  camera_start_capture.sh  controller.launch  core.launch  export_video.launch  pilot.launch  raspi_camera.launch  rov_core.launch  simple_pilot.launch  stereo_camera.launch  teleop.launch  teleop_xbox.launch
msg/: Health.msg  Thruster.msg
rover/: package.xml
rover/extra/: ubuntu_setup.sh
rover/launch/: apm.launch
rover/src/: teleop_joy.cpp
src/: controller.cpp  pilot.cpp  pilot.cpp~  simple_pilot.cpp  simple_pilot.cpp~  teleop_joy.cpp  teleop_xbox.cpp
src/navio/: navio_controller.cpp  navio_controller.h  navio_interface.cpp  navio_interface.h
