<?xml version="1.0"?>

<package>
  <name>bluerov</name>
  <version>0.4.0</version>
  <description>Core launch files for the BlueROV.</description>

  <maintainer email="josh@javconcepts.com">Josh Villbrandt</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>joint_state_publisher</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>mavros</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joint_state_publisher</run_depend>
</package>
